web: fix style for selected item in select in dark mode
closes #2528

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -223,8 +223,8 @@ html > form > input {
     option {
         color: var(--ak-dark-foreground);
     }
-    optgroup:checked,
-    option:checked {
+    select[multiple] optgroup:checked,
+    select[multiple] option:checked {
         color: var(--ak-dark-background);
     }
     .pf-c-input-group {
